examples/test/testpolicy4984.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4984
  namespace: namespace308
spec:
  podSelector:
    matchLabels:
      key17: value47
      key14: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value17
      podSelector:
        matchLabels:
          key10: value33
          key33: value10
          key42: value27
